# dir_compare

./: .gitignore  CMakeLists.txt  README.md
include/dir_compare/: Directory.h
src/: CMakeLists.txt  dir-compare.cpp
src/dir_compare/: CMakeLists.txt  Directory.cpp  utils.h
tests/: CMakeLists.txt  TestDirectory.cpp  TestUtils.cpp
tests/dir1/: unique_file.txt
tests/dir1/subdir1/: unique_file.txt
tests/dir2/: unique_file.txt
